--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -15,7 +15,6 @@
     row-gap: 48px;
     column-gap: 40px;
     padding-bottom: 80px;
-    /* max-width: 720px; */
     column-gap: 28px;
     margin: 0;
     padding: 0;
@@ -31,6 +30,6 @@
 
 @media (min-width: 1280px) {
   .cards__item {
-    max-width: : 984px;
+    max-width: 984px;
   }
 }
