--- a/blocks/launch/__image-background/launch__image-background.css
+++ b/blocks/launch/__image-background/launch__image-background.css
@@ -1,5 +1,6 @@
 .launch__image-background {
-  background-size: cover;
+  object-fit: cover;
   max-width: 100%;
   min-height: 100%;
+  margin: 0;
 }
