--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -21,6 +21,7 @@
   .footer__copyright {
     text-align: left;
     margin-top: 48px;
+    padding-left: 16px;
   }
 }
 
@@ -29,5 +30,6 @@
     max-width: 186px;
     line-height: 1.14;
     margin: 0;
+    padding: 0;
   }
 }
