--- a/blocks/footer/__menu/footer__menu.css
+++ b/blocks/footer/__menu/footer__menu.css
@@ -7,6 +7,7 @@
   .footer__menu {
     flex-direction: column;
     gap: 32px;
+    padding-left: 16px;
   }
 }
 
@@ -14,5 +15,6 @@
   .footer__menu {
     flex-direction: row;
     gap: 18px;
+    padding: 0;
   }
 }
