--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -23,7 +23,7 @@
   }
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (min-width: 1024px) {
   .footer {
     max-width: 928px;
     margin-top: 92px;
@@ -33,6 +33,5 @@
 @media (min-width:1280px) {
   .footer {
     max-width: 1184px;
-    margin-top: 92px;
   }
 }
