--- a/blocks/cards/__link-url/cards__link-url.css
+++ b/blocks/cards/__link-url/cards__link-url.css
@@ -5,11 +5,9 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.22;
-
   text-decoration-line: underline;
-
   color: #FFFFFF;
-  padding-top: 12px;
+  margin-top: 12px;
 }
 
 .cards__link-url:hover {
