--- a/blocks/cards/__link/cards__link.css
+++ b/blocks/cards/__link/cards__link.css
@@ -1,3 +1,8 @@
+.cards__link {
+  display: flex;
+  flex-direction: column;
+}
+
 @media (min-width: 320px) {
   .cards__link {
     max-width: 288px;
