--- a/blocks/cards/__paragraph/cards__paragraph.css
+++ b/blocks/cards/__paragraph/cards__paragraph.css
@@ -4,19 +4,16 @@
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 163%;
+  line-height: 1.625;
   color: #FFFFFF;
-  padding-bottom: 25px;
-  margin: 0 16px;
 }
 
-.cards__paragraph:last-child {
-  padding-bottom: 0;
-}
-
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) {
   .cards__paragraph {
     max-width: 288px;
+    margin: 0;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
 
@@ -25,7 +22,6 @@
     max-width: 352px;
     padding-left: 0;
     padding-right: 0;
-    margin-right: 24px;
   }
 }
 
