--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,3 +1,8 @@
+.cards {
+  display: grid;
+  gap: 50px;
+}
+
 @media (min-width: 320px) {
   .cards {
     max-width: 320px;
@@ -13,6 +18,7 @@
     margin-left: 24px;
     margin-right: 24px;
     margin-bottom: 90px;
+    gap: 73px;
     padding: 0;
   }
 }
@@ -21,6 +27,7 @@
   .cards {
     max-width: 928px;
     margin: 0 48px 92px 48px;
+    gap: 80px;
   }
 }
 
